--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,11 +4,42 @@
     <title>Shopmium</title>
     <%= csrf_meta_tags %>
 
+	    <!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <%= yield %>
+  <nav class="navbar navbar-default">
+  	<div class="container-fluid">
+     	<div class="navbar-header">
+      	<div class="navbar-brand" ></div>
+      </div>
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <img src="logo.PNG" style="float: left">
+      	<ul class="nav navbar-nav" style="float: right;">
+        	<% if @list_menu %>
+        		<li class="active"><a href="/shops">Shops List</a></li>
+        		<li><a href="/shops/new">New Shop</a></li>
+        	<% elsif @new_menu %>
+        		<li><a href="/shops">Shops List</a></li>
+        		<li class="active"><a href="/shops/new">New Shop</a></li>
+        	<% else %>
+        		<li><a href="/shops">Shops List</a></li>
+        		<li><a href="/shops/new">New Shop</a></li>
+        	<% end %>
+      	</ul>
+      </div>
+    </div>
+  </nav>
+  <%= yield %>
   </body>
 </html>
