--- a/app/views/shops/filter.html.erb
+++ b/app/views/shops/filter.html.erb
@@ -1,39 +1,3 @@
 <h1>Search result</h1>
 
-
-
-<table>
-  <thead>
-    <tr>
-      <th>Chain</th>
-      <th>Name</th>
-      <th>Latitude</th>
-      <th>Longitude</th>
-      <th>Address</th>
-      <th>City</th>
-      <th>Zip</th>
-      <th>Phone</th>
-      <th>Country code</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @shops.each do |shop| %>
-      <tr>
-        <td><%= shop.chain %></td>
-        <td><%= shop.name %></td>
-        <td><%= shop.latitude %></td>
-        <td><%= shop.longitude %></td>
-        <td><%= shop.address %></td>
-        <td><%= shop.city %></td>
-        <td><%= shop.zip %></td>
-        <td><%= shop.phone %></td>
-        <td><%= shop.country_code %></td>
-        <td><%= link_to 'Show', shop %></td>
-        <td><%= link_to 'Edit', edit_shop_path(shop) %></td>
-        <td><%= link_to 'Destroy', shop, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<%= render 'list', shop: @shop %>
