--- a/app/views/shops/index.html.erb
+++ b/app/views/shops/index.html.erb
@@ -1,66 +1,53 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Shops</h1>
 
-<form action="/filter_shops" method="GET">
-  <h2>Shops in X radius</h2>
-  <label>Latitude</label>
-  <input type="text" name="latitude"><br>
-  <label>Longitude</label>
-  <input type="text" name="longitude"><br>
-  <label>Radius in metres</label>
-  <input type="text" name="x"><br>
-  <button>Search</button>
+<form action="/filter_shops" method="GET"  class="form-inline">
+  <div class="panel panel-default">
+    <div class="panel-heading">Shops in X radius</div>
+    <div class="panel-body">
+      <div class="form-group">
+        <label>Latitude</label>
+        <input class="form-control"  type="text" name="latitude"><br>
+      </div>
+      <div class="form-group">
+        <label>Longitude</label>
+        <input  class="form-control" type="text" name="longitude"><br>
+      </div>
+      <div class="form-group">
+        <label>Radius in metres</label>
+        <input class="form-control"  type="text" name="x"><br>
+      </div>
+      <button class="btn btn-default">Search</button>
+    </div>
+  </div>
 </form>
 
 
-<form action="/closest_shops" method="GET">
-  <h2>X closest shops</h2>
-  <label>Latitude</label>
-  <input type="text" name="latitude"><br>
-  <label>Longitude</label>
-  <input type="text" name="longitude"><br>
-  <label>X</label>
-  <input type="text" name="x"><br>
-  <button>Search</button>
+<form  action="/closest_shops" method="GET"  class="form-inline">
+  <div class="panel panel-default">
+    <div class="panel-heading">X closest shops</div>
+    <div class="panel-body">
+      <div class="form-group">
+        <label>Latitude</label>
+        <input class="form-control"  type="text" name="latitude"><br>
+      </div>
+      <div class="form-group">
+        <label>Longitude</label>
+        <input  class="form-control" type="text" name="longitude"><br>
+      </div>
+      <div class="form-group">
+        <label>X</label>
+        <input class="form-control"  type="text" name="x"><br>
+      </div>
+      <button class="btn btn-default">Search</button>
+    </div>
+  </div>
 </form>
 
-<table>
-  <thead>
-    <tr>
-      <th>Chain</th>
-      <th>Name</th>
-      <th>Latitude</th>
-      <th>Longitude</th>
-      <th>Address</th>
-      <th>City</th>
-      <th>Zip</th>
-      <th>Phone</th>
-      <th>Country code</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @shops.each do |shop| %>
-      <tr>
-        <td><%= shop.chain %></td>
-        <td><%= shop.name %></td>
-        <td><%= shop.latitude %></td>
-        <td><%= shop.longitude %></td>
-        <td><%= shop.address %></td>
-        <td><%= shop.city %></td>
-        <td><%= shop.zip %></td>
-        <td><%= shop.phone %></td>
-        <td><%= shop.country_code %></td>
-        <td><%= link_to 'Show', shop %></td>
-        <td><%= link_to 'Edit', edit_shop_path(shop) %></td>
-        <td><%= link_to 'Destroy', shop, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div class="btn btn-shopmium" style= "float: right"><%= link_to ' New Shop', new_shop_path, class: "glyphicon glyphicon-shopping-cart" %></div>
+
+<%= render 'list', shop: @shop %>
 
 <br>
 
-<%= link_to 'New Shop', new_shop_path %>
