--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<div class="list-group">
 <p>
   <strong>Chain:</strong>
   <%= @shop.chain %>
@@ -44,6 +44,6 @@
   <strong>Country code:</strong>
   <%= @shop.country_code %>
 </p>
-
+</div>
 <%= link_to 'Edit', edit_shop_path(@shop) %> |
 <%= link_to 'Back', shops_path %>
