--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,3 +37,12 @@
  	color: white;
  }
  
+ .bloc{
+ 	width:100%;
+    margin: auto;
+    padding:10px;
+    border:1px solid #DDD;
+    border-radius:10px;
+    -webkit-border-radius:5px;
+    -moz-border-radius:5px;
+ }
