--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
       	<div class="navbar-brand" ></div>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <img src="logo.PNG" style="float: left">
+      <img src="/logo.PNG" style="float: left">
       	<ul class="nav navbar-nav" style="float: right;">
         	<% if @list_menu %>
         		<li class="active"><a href="/shops">Shops List</a></li>
