--- a/app/views/shops/edit.html.erb
+++ b/app/views/shops/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Shop</h1>
+<div class="btn btn-shopmium" style="float: right; margin-right: 10px"><%= link_to ' Back', shops_path, :class => "glyphicon glyphicon-circle-arrow-left" %></div>
+
+<div class="panel-heading"><h1>Editing Shop</h1></div>
 
 <%= render 'form', shop: @shop %>
 
-<%= link_to 'Show', @shop %> |
-<%= link_to 'Back', shops_path %>
