--- a/app/views/shops/new.html.erb
+++ b/app/views/shops/new.html.erb
@@ -1,5 +1,6 @@
+<div class="btn btn-shopmium" style="float: right; margin-right: 10px"><%= link_to ' Back', shops_path, :class => "glyphicon glyphicon-circle-arrow-left" %></div>
+
 <div class="panel-heading"><h1>New Shop</h1></div>
 
 <%= render 'form', shop: @shop %>
 
-<%= link_to 'Back', shops_path %>
