--- a/app/views/shops/_form.html.erb
+++ b/app/views/shops/_form.html.erb
@@ -59,7 +59,7 @@
   </div>
 
   <div class="actions form-group">
-    <%= f.submit class: "btn btn-success" %>
+    <%= f.submit class: "btn btn-success", :style => "float: right" %>
   </div>
 </div>
 </div>
